@@ -29,8 +29,7 @@
 using namespace NHttpEnums;
 
 NHttpMsgTrailer::NHttpMsgTrailer(const uint8_t* buffer, const uint16_t buf_size,
-    NHttpFlowData* session_data_,
-    SourceId source_id_, bool buf_owner) :
+    NHttpFlowData* session_data_, SourceId source_id_, bool buf_owner) :
     NHttpMsgHeadShared(buffer, buf_size, session_data_, source_id_, buf_owner)
 {
     transaction->set_trailer(this, source_id);
@@ -38,7 +37,6 @@ NHttpMsgTrailer::NHttpMsgTrailer(const uint8_t* buffer, const uint16_t buf_size,
 
 void NHttpMsgTrailer::gen_events()
 {
-    NHttpMsgHeadShared::gen_events();
 }
 
 void NHttpMsgTrailer::print_section(FILE* output)
