@@ -1,3 +1,7 @@
+Pending - build 154
+
+-- new_http_inspect parsing and event handling updates
+
 15/05/22 - build 153
 
 -- new_http_inspect parsing updates
